samples/_failures_safe/1761352818_02d84d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdd8a5d2.c: In function ‘main’:
./samples/SAFE/__tmp_bdd8a5d2.c:139:5: error: expected declaration or statement at end of input
  139 |     int choice;
      |     ^~~
